--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,22 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'poppins', sans-serif;
 }
 
-.main {
-    width: 100%;
-    background: linear-gradient(to top, black 50%);
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 14px;
+    gap: 14px;
 }
+
+.nav-container {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+
